deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-app
  labels:
    app: producer-app
spec:
  selector:
    matchLabels:
      app: producer-app
  template:
    metadata:
      labels:
        app: producer-app
    spec:
      containers:
        - name: producer-app
          image: producer-app:v1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
