deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: producer-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - home-host2
      secretName: producer-app-tls
  rules:
    - host: "home-host2"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: producer-app
                port:
                  number: 80
